kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bank
  template:
    metadata:
      labels:
        app: bank
    spec:
      containers:
        - name: bank
          image: allanmombo/bank:main
          resources:
            requests:
              cpu: "40m"
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
