kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-service
  labels:
    app: bank-service
spec:
  ports:
    - port: 3030
      name: http
      targetPort: 3030
  selector:
    app: bank
